--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<chen.yy.com.news.views.HackyViewPager
-    android:background="@drawable/bg"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_pager"
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:background="@drawable/bg"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <TextView
+        android:id="@+id/tv_visit"
+        android:gravity="center"
+        android:clickable="true"
+        android:layout_marginLeft="8dp"
+        android:drawableLeft="@drawable/ssdk_back_arr"
+        android:textSize="@dimen/font_normal"
+        android:text="@string/images_visit"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+    <chen.yy.com.news.views.HackyViewPager
+        android:layout_below="@+id/tv_visit"
+        android:id="@+id/view_pager"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/view_pager"
+        android:gravity="center"
+        android:id="@+id/tv__images_count"
+       android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+</LinearLayout>
