--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,20 @@
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+    <style name="CustomTab" parent="Base.Widget.Design.TabLayout">
+        <item name="tabBackground">@drawable/tab_bg</item>
+        <item name="tabMaxWidth">100dp</item>
 
+        <item name="tabPaddingEnd">30dp</item>
+        <item name="tabIndicatorColor">@color/colorPrimaryDark</item>
+        <item name="tabTextAppearance">@style/myTabTextSize</item>
+
+    </style>
+<style name="myTabTextSize" parent="TextAppearance.Design.Tab">
+    <item name="android:textSize">16sp</item>
+
+
+</style>
 
 
 </resources>
