--- a/app/src/main/res/layout/fragment_shopcar.xml
+++ b/app/src/main/res/layout/fragment_shopcar.xml
@@ -4,16 +4,20 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 <RelativeLayout
-    android:layout_width="match_parent"
+
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <TextView
         android:gravity="center"
         android:text="@string/shopcar"
+        android:layout_alignParentRight="true"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
      <TextView
          android:clickable="true"
+         android:layout_centerVertical="true"
          android:id="@+id/tv_edit"
+         android:layout_marginRight="10dp"
          android:text="@string/edit"
          android:layout_alignParentRight="true"
          android:layout_width="wrap_content"
